--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,26 @@
 blinker==1.6.2
+category-encoders==2.6.1
 click==8.1.3
 colorama==0.4.6
 Flask==2.3.2
 itsdangerous==2.1.2
 Jinja2==3.1.2
+joblib==1.2.0
+lightgbm==3.3.5
 MarkupSafe==2.1.3
+numpy==1.25.0
+packaging==23.1
+pandas==2.0.2
+patsy==0.5.3
 psycopg2-binary==2.9.6
+python-dateutil==2.8.2
 python-dotenv==1.0.0
+pytz==2023.3
+scikit-learn==1.2.2
+scipy==1.10.1
+six==1.16.0
+statsmodels==0.14.0
+threadpoolctl==3.1.0
+tzdata==2023.3
 Werkzeug==2.3.6
+xgboost==1.7.6
